# Cheese

./: Cheese.cpp  Cheese.sln  Cheese.vcxproj  Cheese.vcxproj.filters  DebugLogger.ixx  DebugVectorOutput.ixx  GLAD-WGL.ixx  GLAD1-A0.ixx  GLAD1-A1.ixx  GLAD1-A2.ixx  GLAD1-A3.ixx  GLAD1-A4.ixx  GLAD1-A5.ixx  GLAD1-V0.cpp  GLAD1-V1.cpp  GLAD1-V2.cpp  GLAD1-V3.cpp  GLAD1-V4.cpp  GLAD1-V5.cpp  GLAD1.ixx  GLAD2-A0.ixx  GLAD2-A1.ixx  GLAD2-V0.cpp  GLAD2-V1.cpp  GLAD2.ixx  GLAD3-A0.ixx  GLAD3-A1.ixx  GLAD3-A2.ixx  GLAD3-A3.ixx  GLAD3-V0.cpp  GLAD3-V1.cpp  GLAD3-V2.cpp  GLAD3-V3.cpp  GLAD3.ixx  GLAD4-A0.ixx  GLAD4-A1.ixx  GLAD4-A2.ixx  GLAD4-A3.ixx  GLAD4-A4.ixx  GLAD4-A5.ixx  (+47 more)
GLAD/: GLAD-BASE.ixx  GLAD-Macros.ixx  GLAD-Types.ixx  GLAD-V1_0.ixx  GLAD-V1_1.ixx  GLAD-V1_2.ixx  GLAD-V1_3.ixx  GLAD-V1_4.ixx  GLAD-V1_5.ixx  GLAD-V2_0.ixx  GLAD-V2_1.ixx  GLAD-V3_0.ixx  GLAD-V3_1.ixx  GLAD-V3_2.ixx  GLAD-V3_3.ixx  GLAD-V4_0.ixx  GLAD-V4_1.ixx  GLAD-V4_2.ixx  GLAD-V4_3.ixx  GLAD-V4_4.ixx  GLAD-V4_5.ixx  GLAD-V4_6.ixx  GLAD.cppm  GLAD.ixx  GLAD1-V0.ixx  GLAD1-V1.ixx  GLAD1-V2.ixx  GLAD1-V3.ixx  GLAD1-V4.ixx  GLAD1-V5.ixx  GLAD2-V0.ixx  GLAD2-V1.ixx  GLAD3-V0.ixx  GLAD3-V1.ixx  GLAD3-V2.ixx  GLAD3-V3.ixx  GLAD4-V0.ixx  GLAD4-V1.ixx  GLAD4-V2.ixx  GLAD4-V3.ixx  (+6 more)
GLM/glm/: CMakeLists.txt  generateGLMModules.py
GLM/glm/gtc/: type_aligned.hpp
GLM/glm/gtx/: fast_trigonometry.inl
GLM/glm/modules/: GLM-common.ixx  GLM-detail_compute_common.ixx  GLM-detail_compute_vector_relational.ixx  GLM-detail_qualifier.ixx  GLM-detail_setup.ixx  GLM-detail_type_float.ixx  GLM-detail_type_half.ixx  GLM-detail_type_mat2x2.ixx  GLM-detail_type_mat2x3.ixx  GLM-detail_type_mat2x4.ixx  GLM-detail_type_mat3x2.ixx  GLM-detail_type_mat3x3.ixx  GLM-detail_type_mat3x4.ixx  GLM-detail_type_mat4x2.ixx  GLM-detail_type_mat4x3.ixx  GLM-detail_type_mat4x4.ixx  GLM-detail_type_quat.ixx  GLM-detail_type_vec1.ixx  GLM-detail_type_vec2.ixx  GLM-detail_type_vec3.ixx  GLM-detail_type_vec4.ixx  GLM-exponential.ixx  GLM-ext.ixx  GLM-ext_matrix_clip_space.ixx  GLM-ext_matrix_common.ixx  GLM-ext_matrix_double2x2.ixx  GLM-ext_matrix_double2x2_precision.ixx  GLM-ext_matrix_double2x3.ixx  GLM-ext_matrix_double2x3_precision.ixx  GLM-ext_matrix_double2x4.ixx  GLM-ext_matrix_double2x4_precision.ixx  GLM-ext_matrix_double3x2.ixx  GLM-ext_matrix_double3x2_precision.ixx  GLM-ext_matrix_double3x3.ixx  GLM-ext_matrix_double3x3_precision.ixx  GLM-ext_matrix_double3x4.ixx  GLM-ext_matrix_double3x4_precision.ixx  GLM-ext_matrix_double4x2.ixx  GLM-ext_matrix_double4x2_precision.ixx  GLM-ext_matrix_double4x3.ixx  (+187 more)
KHR/: KHR-Macros.ixx  KHR.ixx
Models/: cube.blend  cube.blend1
OldObjects/: BlenderObject.cpp  BlenderObject.h  BlenderObjectReader.cpp  BlenderObjectReader.h  Camera.h  DynamicWindow.cpp  DynamicWindow.h  Main.cpp  MaterialManager.cpp  MaterialManager.h  ObjectBase.cpp  ObjectBase.h  ReadBlenderFile.h  ShaderBase.cpp  ShaderBase.h  ShaderProgram.cpp  ShaderProgram.h  ThreadedObjectLoader.cpp  ThreadedObjectLoader.h  VectorOutput.h
PythonForObjects/DLLs/: _asyncio_d.pyd  _bz2_d.pyd  _ctypes_d.pyd  (+25 more)
Shaders/: FragmentShader.glsl  ShaderSources.ixx  VertexShader.glsl  compile_shaders.py
VK/: CMakeLists.txt  vulkan.ixx
VK/vulkan/: vulkan.hpp  vulkan_enums.hpp  vulkan_extension_inspection.hpp  vulkan_funcs.hpp  vulkan_handles.hpp  vulkan_hash.hpp  vulkan_hpp_macros.hpp  vulkan_raii.hpp  vulkan_shared.hpp  vulkan_static_assertions.hpp  vulkan_to_string.hpp
(+82 files in other folders)
